--- a/libdrm-git/PKGBUILD
+++ b/libdrm-git/PKGBUILD
@@ -17,9 +17,11 @@ provides=('libdrm')
 conflicts=('libdrm')
 
 source=('libdrm::git+https://gitlab.freedesktop.org/mesa/drm.git'
-        COPYING)
+        COPYING
+        'libdrm-2.4.120.patch')
 sha512sums=('SKIP'
-            'b0ca349b882a4326b19f81f22804fabdb6fb7aef31cdc7b16b0a7ae191bfbb50c7daddb2fc4e6c33f1136af06d060a273de36f6f3412ea326f16fa4309fda660')
+            'b0ca349b882a4326b19f81f22804fabdb6fb7aef31cdc7b16b0a7ae191bfbb50c7daddb2fc4e6c33f1136af06d060a273de36f6f3412ea326f16fa4309fda660'
+            'SKIP')
 
 pkgver() {
     cd $_realname
