--- a/lib32-libdrm-git/PKGBUILD
+++ b/lib32-libdrm-git/PKGBUILD
@@ -17,9 +17,11 @@ provides=('lib32-libdrm')
 conflicts=('lib32-libdrm')
 
 source=('libdrm::git+https://gitlab.freedesktop.org/mesa/drm.git'
-        COPYING)
+        COPYING
+        'libdrm-2.4.120.patch')
 sha256sums=('SKIP'
-            '9631d4f694952e3e6ae5a05534c2e93e994e47d3413677a3a00e45c8cef6db93')
+            '9631d4f694952e3e6ae5a05534c2e93e994e47d3413677a3a00e45c8cef6db93'
+            'SKIP')
 
           
 pkgver() {
