--- a/xf86-video-amdgpu-git/PKGBUILD
+++ b/xf86-video-amdgpu-git/PKGBUILD
@@ -17,8 +17,10 @@ makedepends=('git' 'meson' 'xorg-server-devel' 'systemd')
 provides=("xf86-video-amdgpu=${pkgver}")
 conflicts=("xf86-video-amdgpu")
 groups=('xorg-drivers-git')
-source=("${pkgname}::git+https://gitlab.freedesktop.org/xorg/driver/xf86-video-amdgpu.git")
-sha256sums=('SKIP')
+source=("${pkgname}::git+https://gitlab.freedesktop.org/xorg/driver/xf86-video-amdgpu.git"
+        'amdgpu-23.0.0.patch')
+sha256sums=('SKIP'
+            'SKIP')
 
 pkgver() {
   cd ${pkgname}
