--- a/libdrm-git/PKGBUILD
+++ b/libdrm-git/PKGBUILD
@@ -1,10 +1,12 @@
-# Maintainer : Lone_Wolf <lone_wolf@klaas-de-kat.nl>
-# Contributor : Eric Engestrom <eric@engestrom.ch>
-# Contributor : Jan de Groot <jgc@archlinux.org>
-
+# Maintainer: centi_07 <centi07 at proton dot me>
+# based on extra/xf86-video-amdgpu by
+# Yurii Kolesnykov <root at yurikoles dot com>
+#
+# Send PRs here: https://github.com/centi07/arch-ps4-aur
+#
 pkgname=libdrm-ps4
 _realname=libdrm
-pkgver=2.4.114.r2.ge699b28b
+pkgver=2.4.128.r0.g679c4749
 pkgrel=1
 pkgdesc="Userspace interface to kernel DRM services, master git version"
 arch=(i686 x86_64)
