--- a/.github/workflows/xf86-video-amdgpu-ps4-build.yml
+++ b/.github/workflows/xf86-video-amdgpu-ps4-build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Update system and install dependencies
         run: |
           pacman -Syu --noconfirm
-          pacman -S --noconfirm base-devel git
+          pacman -S --noconfirm base-devel git xorg
 
       - name: Compile using PKGBUILD
         working-directory: xf86-video-amdgpu-ps4
