--- a/.github/workflows/xf86-video-amdgpu-ps4-build.yml
+++ b/.github/workflows/xf86-video-amdgpu-ps4-build.yml
@@ -28,10 +28,12 @@ jobs:
       - name: Compile using PKGBUILD
         working-directory: xf86-video-amdgpu-ps4
         run: |
+          echo "%root ALL=(ALL:ALL) NOPASSWD: ALL" >> /etc/sudoers
           useradd -m someuser
           usermod -aG root someuser
+          usermod --password pleasefuckingwork someuser
           su someuser /bin/bash -c 'makepkg --noconfirm -s'
-
+          
       - name: Compress artifacts
         working-directory: xf86-video-amdgpu-ps4
         run: |
