--- a/.github/workflows/lib32-mesa-ps4-build.yml
+++ b/.github/workflows/lib32-mesa-ps4-build.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      
+      - name: Enable multilib for archlinux
+        run: |
+          echo "[multilib] \
+          Include = /etc/pacman.d/mirrorlist" >> /etc/pacman.conf
 
       - name: Initialize Arch keyring
         run: |
