Update dependency from libdrm-ps4 to libdrm

--- a/lib32-libdrm-ps4/PKGBUILD
+++ b/lib32-libdrm-ps4/PKGBUILD
@@ -10,7 +10,7 @@ pkgrel=1
 pkgdesc="Userspace interface to kernel DRM services, git 32-bit version"
 arch=(x86_64)
 license=('custom')
-depends=('libdrm-ps4' 'lib32-libpciaccess' 'lib32-gcc-libs')
+depends=('libdrm' 'lib32-libpciaccess' 'lib32-gcc-libs')
 makedepends=('python-docutils' 'meson' 'git' 'ninja')
 checkdepends=('lib32-cairo')
 url="http://dri.freedesktop.org/"
