--- a/lib32-libdrm-ps4/PKGBUILD
+++ b/lib32-libdrm-ps4/PKGBUILD
@@ -5,7 +5,7 @@
 # Send PRs here: https://github.com/centi07/arch-ps4-aur
 #
 pkgname=lib32-libdrm-ps4
-pkgver=2.4.114.r2.ge699b28b
+pkgver=2.4.128.r1.g39680280
 pkgrel=1
 pkgdesc="Userspace interface to kernel DRM services, git 32-bit version"
 arch=(x86_64)
