--- a/xf86-video-amdgpu-ps4/PKGBUILD
+++ b/xf86-video-amdgpu-ps4/PKGBUILD
@@ -6,8 +6,8 @@
 #
 
 pkgname=xf86-video-amdgpu-ps4
-pkgver=23.0.0.r26.gb696afa
-pkgrel=2
+pkgver=25.0.0
+pkgrel=1
 pkgdesc="X.org amdgpu video driver (git version)"
 arch=('x86_64')
 url="https://xorg.freedesktop.org/"
