--- a/mesa-ps4/PKGBUILD
+++ b/mesa-ps4/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: Andreas Radke <andyrtr@archlinux.org>
 
-pkgbase=mesa
+pkgbase=mesa-ps4
 pkgname=(
   mesa
   opencl-mesa
