--- a/mesa-ps4/PKGBUILD
+++ b/mesa-ps4/PKGBUILD
@@ -254,7 +254,7 @@ build () {
         -D b_ndebug=true
         -D b_lto=false
         -D egl=enabled
-        -D gallium-drivers=r300,r600,radeonsi,virgl,svga,softpipe,llvmpipe,zink
+        -D gallium-drivers=r300,r600,radeonsi,nouveau,virgl,svga,softpipe,llvmpipe,i915,iris,crocus,zink
         -D gallium-extra-hud=true
         -D gallium-rusticl=${_rusticl}
         -D gallium-va=enabled
